# LangScribe

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: lint.yml
AIWorker/: Dockerfile  main.py
AIWorker/Classes/: CustomExceptions.py  Gemma.py  __init__.py  request_dtos.py
AIWorker/Services/: GemmaRunner.py  __init__.py
AIWorker/nlp/: models.py  nlpAnalyzer.py  normalizerPipeline.py  sentence-maker.py  textNormalizer.py
AIWorker/promptGen/: genPipeline.py  internalPrompts.json  llmPromptGen.py  promptDAO.py  promptEnums.py  promptModels.py  promptPipeline.py  promptRegistry.py  promptRepository.py
WebServer/: Dockerfile  __init__.py  main.py  pyproject.toml
WebServer/Persistence/DTOs/: LanguagesDtos.py  PromptsDtos.py  ReportsDtos.py  SubscriptionDtos.py  UserDtos.py  UserLanguagesDtos.py  UserMessagesDtos.py  __init__.py
WebServer/Persistence/Enums/: __init__.py  general_enums.py  languages_enums.py
WebServer/Persistence/Models/: Language.py  Prompt.py  Report.py  Subscription.py  Token.py  User.py  UserLanguage.py  UserMessage.py  __init__.py
WebServer/Repositories/: LanguagesRepo.py  PromptsRepo.py  ReportsRepo.py  SubscriptionsRepo.py  UserLanguagesRepo.py  UserMessagesRepo.py  UsersRepo.py  __init__.py
WebServer/Resources/: JwtService.py  OpenAIService.py  __init__.py  redis.py
WebServer/Routers/: AdminUsersRouter.py  AuthRouter.py  JobsRouter.py  LanguagesRouter.py  PromptsRouter.py  ReportsRouter.py  SubscriptionRouter.py  UserLanguagesRouter.py  UserMessagesRouter.py  UsersRouter.py  __init__.py
WebServer/alembic/: env.py
WebServer/alembic/versions/: 134e6e8cf88f_.py  2cad4cfcd2f1_new_user_flag.py  30bc98dd9245_relations_now_cascade.py  38a8d5ee7297_testing_alembic1.py  59a3b6f89eb8_intento_2.py  86c7314e336c_languages_code_aint_enum.py  8a81258deb85_user_native_default_language.py  c2dad3d2a9ec_intento_3.py  d04863a598b5_fist_migration.py  dcca8e27d7db_intento_4.py  f7ca6f9f5035_change_language_enum.py
WebServer/resources/: __init__.py  config.py  database.py
services/analytics-service/: Dockerfile  main.py  pyproject.toml
services/api/: Dockerfile
services/feedback-service/: .gitignore  Dockerfile  main.py  pyproject.toml
services/prompt-engine/: Dockerfile  main.py  pyproject.toml
services/srs-service/: Dockerfile  main.py  pyproject.toml
