[project]
name = "langscribe_api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "supabase>=2.3.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-dateutil>=2.8.0",
    "spacy>=3.7.0",
    "azure-cosmos>=4.14.1",
    "asyncpg>=0.30.0",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "alembic>=1.17.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.4",
    "vulture>=2.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "N999",
    "D104",
    "D100",
    "D103",
    "INP001",
    "D101",
    "RUF003",
    
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.vulture]
min_confidence = 80
exclude = [
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
]
ignore_names = [
    "*_test.py",
]
ignore_decorators = [
    "@app.route",
    "@celery.task",
    "@property",
]
sort_by_size = true
