[project]
name = "analytics-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "azure-cosmos>=4.5.0",
    "redis>=5.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
