[project]
name = "feedback-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "spacy>=3.7.0",
    "transformers>=4.36.0",
    "textstat>=0.7.0",
    "langdetect>=1.0.0",
    "nltk>=3.8.0",
    "azure-cosmos>=4.5.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
