[project]
name = "prompt-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "azure-cosmos>=4.5.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
