[project]
name = "srs-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "azure-cosmos>=4.5.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
